--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     height: 400px;
     width: 300px;
     display: grid;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 2.5fr 1fr 7fr;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 2px 2px 9px rgba(0, 0, 0, 0.757);
@@ -21,7 +21,7 @@ body{
     display: grid;
     grid-template-columns: 3.5fr 0.5fr;
     gap: 20px;
-    padding: 15px 0;
+    padding: 18px 0;
 }
 input{
     background-color: rgba(255, 255, 0, 0.131);
@@ -43,11 +43,23 @@ input{
     border: none;
     display: none;
 }
+.mid-section{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    padding: 5px 0 10px;
+}
+.mid-section button{
+    color: white;
+    background-color: purple;
+    padding: 5px 7px;
+    border: 2px purple solid;
+}
 .buttons-section{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1.5fr;
     gap: 15px;
-    padding: 25px 0;
+
 }
 button{
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.757);
