--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     padding: 18px 0;
 }
 input{
+    font-weight: bold;
     background-color: rgba(255, 255, 0, 0.131);
     box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.757);
     padding: 0 5px;
